@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.233 2007/09/28 20:21:18 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.234 2007/10/01 20:47:48 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -4601,6 +4601,8 @@ filledcurves_opts *filledcurves_options)
 	    dx1 = filledcurves_options->at - points[i-1].x;
 	    dx2 = filledcurves_options->at - points[i].x;
 	    dy1 = points[i].y - points[i-1].y;
+	    if (dx1 == dx2)
+		return FALSE;
 	    if (dx1*dx2 <= 0) {
 		*ex = filledcurves_options->at;
 		*ey = points[i-1].y + dy1 * dx1 / (dx1-dx2);
@@ -4612,6 +4614,8 @@ filledcurves_opts *filledcurves_options)
 	    dy1 = filledcurves_options->at - points[i-1].y;
 	    dy2 = filledcurves_options->at - points[i].y;
 	    dx1 = points[i].x - points[i-1].x;
+	    if (dy1 == dy2)
+		return FALSE;
 	    if (dy1*dy2 <= 0) {
 		*ex = points[i-1].x + dx1 * dy1 / (dy1-dy2);
 		*ey = filledcurves_options->at;
